--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- header end -->
 
     <!-- banner start -->
-    <div class="banner container">
+    <div class="banner container" style="display: block;">
       <div class="banner-text">
         <h1>Our Testimonials</h1>
         <p>
